Fixed some spacing and alignment of some things

--- a/src/App.css
+++ b/src/App.css
@@ -34,5 +34,5 @@ h3 {
   background-color: rgba(255, 255, 255, 0.56);
   /* background-color: rgb(228, 228, 228); */
 
-  max-width: 1200px;
+  max-width: 1300px;
 }
